# inheritance_example

./: .gitignore  CMakeLists.txt  Circle.hh  Makefile  Polygon.hh  README.md  Rectangle.hh  Triangle.hh  main.cc
include/: Circle.hh  Polygon.hh  Rectangle.hh  Triangle.hh
